Add Login and Logout. Improved Forms, Models, View
1. Login form.
2. Improved registration user form.
3. Improved profile style. Add adaptive for page.
4. Update comments in recovery password, register pages.
5. Add AUTHENTICATION_BACKENDS in settings.
6. Improved header by auth User.

--- a/PyTime_Project/core/templates/authentication/recovery_password/enter_new_password.html
+++ b/PyTime_Project/core/templates/authentication/recovery_password/enter_new_password.html
@@ -41,10 +41,10 @@
 						Помните свой пароль?
 					</p>
 
-					<!-- Кнопка регистрации -->
-					{% url "authorizationUser" as authorizationUserURl %}
+					<!-- Кнопка авторизации -->
+					{% url "loginUser" as loginUserURl %}
 					
-					{% include "buttons/button_white_background.html" with name="Войти" url_name=authorizationUserURl %}
+					{% include "buttons/button_white_background.html" with name="Войти" url_name=loginUserURl %}
 				</div>
 			</div>
 		</div>
