--- a/PyTime_Project/core/templates/authentication/authorization.html
+++ b/PyTime_Project/core/templates/authentication/authorization.html
@@ -13,36 +13,23 @@
 					Авторизация
 				</p>
 				
-				<form class="authentication_form" method="POST">
-					<!-- <label class="container_form_label"> -->
-						<!-- Почта -->
-					<!-- </label> -->
+				<form class="authentication_form d-flex flex-column" method="post">
+                    {% csrf_token %}
 
-					<!-- <input required type="email" placeholder="Введите почту" class="container_form_input w-100"> -->
-					
-					<!-- <p class="container_form_title">
-						Почта
-					</p>
-						
-					<input required type="email" placeholder="Введите почту" class="container_form_input w-100">
+                    {{ loginForm.non_field_errors }}
 
-					<div class="container_form_text_block d-flex justify-content-between">
-						<p class="container_form_title mb-0">
-							Пароль
-						</p>
+                    {% for field in loginForm %}
+                        <label for="{{ field.id_for_label }}" class="container_form_label">
+                            {{ field.label }}
+                        </label>
 
-						<a href="{% url 'passwordResetEnterMail' %}" class="container_link">
-							Забыли пароль?
-						</a>
-					</div>
+                        {{ field.errors }}
+                        {{ field }}
+                    {% endfor %}
 
-					<input required type="password" placeholder="Введите пароль" class="container_form_input w-100">
-
-					<div class="authentication_button_block d-flex justify-content-center">
-						{% url "serviceUnavailable" as serviceUnavailableUrl %}
-
-		                {% include "buttons/button_black_background.html" with name="Войти" url_name=serviceUnavailableUrl %}
-					</div> -->
+                    <div class="authentication_button_block d-flex justify-content-center">
+                    	<input type="submit" value="Войти" class="button_submit mb-0">
+                    </div>
 				</form>
 
 				<hr class="base_content_separator mx-0">
