--- a/PyTime_Project/core/templates/authentication/recovery_password/enter_mail.html
+++ b/PyTime_Project/core/templates/authentication/recovery_password/enter_mail.html
@@ -39,10 +39,10 @@
 						Помните свой пароль?
 					</p>
 
-					<!-- Кнопка регистрации -->
-					{% url "authorizationUser" as authorizationUserURl %}
+					<!-- Кнопка авторизации -->
+					{% url "loginUser" as loginUserURl %}
 					
-					{% include "buttons/button_white_background.html" with name="Войти" url_name=authorizationUserURl %}
+					{% include "buttons/button_white_background.html" with name="Войти" url_name=loginUserURl %}
 				</div>
 			</div>
 		</div>
