--- a/PyTime_Project/core/templates/projects/projects.html
+++ b/PyTime_Project/core/templates/projects/projects.html
@@ -32,7 +32,7 @@
         <hr class="content_separator">
 
 		<!-- Preview last project -->
-        {% if lastProject is not None %}
+        {% if lastProject %}
     		<div class="content_container d-flex justify-content-between align-items-center">
                 <div class="container_left_side">
                     <p class="one_word_description">
