Fix include path url in header HTML
1. Fix include path url in header HTML

--- a/PyTime_Project/templates/header/header.html
+++ b/PyTime_Project/templates/header/header.html
@@ -10,7 +10,7 @@
         </div>
 
         <!-- Header menu -->
-        {% include 'include\header_menu.html' %}
+        {% include '../include/header_menu.html' %}
     </div>
 
     <div class="header_right_side_block d-flex align-items-center">
@@ -46,6 +46,6 @@
 
     <div class="collapse" id="collapseExample">
         <!-- Header menu -->
-        {% include 'include\header_menu_tablet.html' %}
+        {% include '../include/header_menu_tablet.html' %}
     </div>
 </div>
